--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Assignment-25</title>
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.5.2/css/all.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -30,7 +31,7 @@
                         <div class="col-lg-4">
                             <div class="priceCard">
                                 <h3>Single Use</h3>
-                                <h1 data-counter="per month">$10</h1>
+                                <h1 data-counter="per month"><i class="fa-regular fa-dollar-sign"></i>10</h1>
                                 <ul>
                                     <li>Up to 5 users</li>
                                     <li>Basic support on Github</li>
@@ -45,7 +46,7 @@
                         <div class="col-lg-4">
                             <div class="priceCard">
                                 <h3>Single Use</h3>
-                                <h1 data-counter="per month">$20</h1>
+                                <h1 data-counter="per month"><i class="fa-regular fa-dollar-sign"></i>20</h1>
                                 <ul>
                                     <li>Up to 10 users</li>
                                     <li>Basic support on Github</li>
@@ -60,7 +61,7 @@
                         <div class="col-lg-4">
                             <div class="priceCard">
                                 <h3>Single Use</h3>
-                                <h1 data-counter="per month">$30</h1>
+                                <h1 data-counter="per month"><i class="fa-regular fa-dollar-sign"></i>30</h1>
                                 <ul>
                                     <li>Up to 20 users</li>
                                     <li>Basic support on Github</li>
